packetcrypt-sys/bindings.rs

/* automatically generated by rust-bindgen 0.55.1 */

#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct PacketCrypt_BlockHeader_t {
    pub version: u32,
    pub hashPrevBlock: [u32; 8usize],
    pub hashMerkleRoot: [u32; 8usize],
    pub timeSeconds: u32,
    pub workBits: u32,
    pub nonce: u32,
}
#[test]
fn bindgen_test_layout_PacketCrypt_BlockHeader_t() {
    assert_eq!(
        ::std::mem::size_of::<PacketCrypt_BlockHeader_t>(),
        80usize,
        concat!("Size of: ", stringify!(PacketCrypt_BlockHeader_t))
    );
    assert_eq!(
        ::std::mem::align_of::<PacketCrypt_BlockHeader_t>(),
        4usize,
        concat!("Alignment of ", stringify!(PacketCrypt_BlockHeader_t))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<PacketCrypt_BlockHeader_t>())).version as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(PacketCrypt_BlockHeader_t),
            "::",
            stringify!(version)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<PacketCrypt_BlockHeader_t>())).hashPrevBlock as *const _ as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(PacketCrypt_BlockHeader_t),
            "::",
            stringify!(hashPrevBlock)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<PacketCrypt_BlockHeader_t>())).hashMerkleRoot as *const _
                as usize
        },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(PacketCrypt_BlockHeader_t),
            "::",
            stringify!(hashMerkleRoot)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<PacketCrypt_BlockHeader_t>())).timeSeconds as *const _ as usize
        },
        68usize,
        concat!(
            "Offset of field: ",
            stringify!(PacketCrypt_BlockHeader_t),
            "::",
            stringify!(timeSeconds)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<PacketCrypt_BlockHeader_t>())).workBits as *const _ as usize
        },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(PacketCrypt_BlockHeader_t),
            "::",
            stringify!(workBits)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<PacketCrypt_BlockHeader_t>())).nonce as *const _ as usize },
        76usize,
        concat!(
            "Offset of field: ",
            stringify!(PacketCrypt_BlockHeader_t),
            "::",
            stringify!(nonce)
        )
    );
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct PacketCrypt_AnnounceHdr_t {
    pub version: u8,
    pub softNonce: [u8; 3usize],
    pub hardNonce: u32,
    pub workBits: u32,
    pub parentBlockHeight: u32,
    pub contentType: u32,
    pub contentLength: u32,
    pub contentHash: [u8; 32usize],
    pub signingKey: [u8; 32usize],
}
#[test]
fn bindgen_test_layout_PacketCrypt_AnnounceHdr_t() {
    assert_eq!(
        ::std::mem::size_of::<PacketCrypt_AnnounceHdr_t>(),
        88usize,
        concat!("Size of: ", stringify!(PacketCrypt_AnnounceHdr_t))
    );
    assert_eq!(
        ::std::mem::align_of::<PacketCrypt_AnnounceHdr_t>(),
        4usize,
        concat!("Alignment of ", stringify!(PacketCrypt_AnnounceHdr_t))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<PacketCrypt_AnnounceHdr_t>())).version as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(PacketCrypt_AnnounceHdr_t),
            "::",
            stringify!(version)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<PacketCrypt_AnnounceHdr_t>())).softNonce as *const _ as usize
        },
        1usize,
        concat!(
            "Offset of field: ",
            stringify!(PacketCrypt_AnnounceHdr_t),
            "::",
            stringify!(softNonce)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<PacketCrypt_AnnounceHdr_t>())).hardNonce as *const _ as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(PacketCrypt_AnnounceHdr_t),
            "::",
            stringify!(hardNonce)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<PacketCrypt_AnnounceHdr_t>())).workBits as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(PacketCrypt_AnnounceHdr_t),
            "::",
            stringify!(workBits)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<PacketCrypt_AnnounceHdr_t>())).parentBlockHeight as *const _
                as usize
        },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(PacketCrypt_AnnounceHdr_t),
            "::",
            stringify!(parentBlockHeight)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<PacketCrypt_AnnounceHdr_t>())).contentType as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(PacketCrypt_AnnounceHdr_t),
            "::",
            stringify!(contentType)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<PacketCrypt_AnnounceHdr_t>())).contentLength as *const _ as usize
        },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(PacketCrypt_AnnounceHdr_t),
            "::",
            stringify!(contentLength)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<PacketCrypt_AnnounceHdr_t>())).contentHash as *const _ as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(PacketCrypt_AnnounceHdr_t),
            "::",
            stringify!(contentHash)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<PacketCrypt_AnnounceHdr_t>())).signingKey as *const _ as usize
        },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(PacketCrypt_AnnounceHdr_t),
            "::",
            stringify!(signingKey)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct PacketCrypt_Announce_t {
    pub hdr: PacketCrypt_AnnounceHdr_t,
    pub proof: [u64; 117usize],
}
#[test]
fn bindgen_test_layout_PacketCrypt_Announce_t() {
    assert_eq!(
        ::std::mem::size_of::<PacketCrypt_Announce_t>(),
        1024usize,
        concat!("Size of: ", stringify!(PacketCrypt_Announce_t))
    );
    assert_eq!(
        ::std::mem::align_of::<PacketCrypt_Announce_t>(),
        8usize,
        concat!("Alignment of ", stringify!(PacketCrypt_Announce_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<PacketCrypt_Announce_t>())).hdr as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(PacketCrypt_Announce_t),
            "::",
            stringify!(hdr)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<PacketCrypt_Announce_t>())).proof as *const _ as usize },
        88usize,
        concat!(
            "Offset of field: ",
            stringify!(PacketCrypt_Announce_t),
            "::",
            stringify!(proof)
        )
    );
}
impl Default for PacketCrypt_Announce_t {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct PacketCrypt_HeaderAndProof_t {
    pub blockHeader: PacketCrypt_BlockHeader_t,
    pub _pad: u32,
    pub nonce2: u32,
    pub announcements: [PacketCrypt_Announce_t; 4usize],
    pub proof: [u8; 8usize],
}
#[test]
fn bindgen_test_layout_PacketCrypt_HeaderAndProof_t() {
    assert_eq!(
        ::std::mem::size_of::<PacketCrypt_HeaderAndProof_t>(),
        4192usize,
        concat!("Size of: ", stringify!(PacketCrypt_HeaderAndProof_t))
    );
    assert_eq!(
        ::std::mem::align_of::<PacketCrypt_HeaderAndProof_t>(),
        8usize,
        concat!("Alignment of ", stringify!(PacketCrypt_HeaderAndProof_t))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<PacketCrypt_HeaderAndProof_t>())).blockHeader as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(PacketCrypt_HeaderAndProof_t),
            "::",
            stringify!(blockHeader)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<PacketCrypt_HeaderAndProof_t>()))._pad as *const _ as usize
        },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(PacketCrypt_HeaderAndProof_t),
            "::",
            stringify!(_pad)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<PacketCrypt_HeaderAndProof_t>())).nonce2 as *const _ as usize
        },
        84usize,
        concat!(
            "Offset of field: ",
            stringify!(PacketCrypt_HeaderAndProof_t),
            "::",
            stringify!(nonce2)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<PacketCrypt_HeaderAndProof_t>())).announcements as *const _
                as usize
        },
        88usize,
        concat!(
            "Offset of field: ",
            stringify!(PacketCrypt_HeaderAndProof_t),
            "::",
            stringify!(announcements)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<PacketCrypt_HeaderAndProof_t>())).proof as *const _ as usize
        },
        4184usize,
        concat!(
            "Offset of field: ",
            stringify!(PacketCrypt_HeaderAndProof_t),
            "::",
            stringify!(proof)
        )
    );
}
impl Default for PacketCrypt_HeaderAndProof_t {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct PacketCrypt_Coinbase_t {
    pub magic: u32,
    pub annLeastWorkTarget: u32,
    pub merkleRoot: [u8; 32usize],
    pub numAnns: u64,
}
